--- a/.github/workflows/deploy-bookdown.yaml
+++ b/.github/workflows/deploy-bookdown.yaml
@@ -17,7 +17,7 @@ jobs:
         |
           docker build . --file Dockerfile --tag example
           docker container create --name pages_build example:latest
-          docker cp pages_build:/opt/auto-deploying-bookdown-example/_book ./_book
+          docker cp pages_build:/opt/R-cookbook/_book ./_book
       - name: deploy to github pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
