--- a/.github/workflows/deploy-bookdown.yaml
+++ b/.github/workflows/deploy-bookdown.yaml
@@ -16,7 +16,7 @@ jobs:
         run:
         |
           docker build . --file Dockerfile --tag example
-          docker container create --name pages_build
+          docker container create --name pages_build example:latest
           docker cp pages_build:/opt/R-cookbook/_book ./_book
       - name: deploy to github pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
